# fluence-composedb

./: .gitignore  .repl_history  README.md  build.sh  index-tu-profile.json  index.sh  package-lock.json  package.json  readme
aqua/: composedb.aqua  deploy.aqua  did.aqua  explore.aqua  export.aqua  ipfs.aqua  maintenance.aqua  network.aqua  registry.aqua  server.aqua  test.aqua  types.aqua
build_network/: ceramic-alt.dockerfile  docker-compose-alt.yaml  docker-compose.yaml
composedb/: .gitignore  package.json  tsconfig.json
composedb-cli/: .gitignore  package-lock.json  package.json  tsconfig.json  tu-profile--runtime.js
composites/: intermediaries.graphql  prrr.graphql  tu-intermediary--runtime.json  tu-intermediary-relation--runtime.json  tu-intermediary-relation.graphql  tu-intermediary-relation.json  tu-intermediary.graphql  tu-intermediary.json  tu-key.graphql  tu-key.json  tu-profile.graphql  (+3 more)
marine/composedb_adapter/: Cargo.toml  build.sh
marine/composedb_adapter/artifacts/: composedb_adapter.wasm
marine/composedb_adapter/src/: main.rs
marine/composedb_demo/: Cargo.toml  Config.toml
marine/composedb_demo/composites/: intermediaries.json  litkeys.json
marine/composedb_demo/configs/: Config.toml  deploy_cfg.json
marine/composedb_demo/src/: bin_requests.rs  composite.rs  curl.rs  endpoints.rs  files.rs  http_requests.rs  intermediaries.rs  ipfs.rs  lit.rs  main.rs  model.rs  requests.rs  types.rs
marine/composedb_demo/subgraphs/: mutation_intermediary.graphql  mutation_key_v2.graphql  query.graphql  schema.graphql  schema_mutations_v4.graphql
(+181 files in other folders)
