[package]
name = "composedb-adapter"
version = "0.1.0"
authors = ["JRM"]
edition = "2018"
description = "composedb-adapter"
license = "Apache-2.0"

[[bin]]
name = "composedb_adapter"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
log = "0.4.14"
serde = "1.0.149"

[dev-dependencies]


[dev]
[profile.release]
opt-level = "s"
