[package]
name = "composedb_demo"
version = "0.1.0"
authors = ["Joera <joeramulders@gmail.com>"]
edition = "2018"

[[bin]]
name = "composedb_demo"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
