[package]
name = "composedb_demo"
version = "0.1.0"
authors = ["Joera <joeramulders@gmail.com>"]
edition = "2018"

[[bin]]
name = "composedb_demo"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
dirs = "4.0.0"
graphql_client = "0.11.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
